sites/navy/clusters/dal-navy-core-1/wave-5/overlays/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: portfolio
    app.kubernetes.io/name: portfolio
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: portfolio
    app.kubernetes.io/name: portfolio
